--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luno Tech - Think Different. Build Better. | Premium Digital Solutions</title>
+  <title>LunoTech - #1 Website Development & Design Company in India | Custom Web Solutions</title>
   <meta name="description"
-    content="Luno Tech creates exceptional digital experiences with Apple-inspired design and cutting-edge technology. Web development, mobile apps, AI integration, and digital strategy in Coimbatore, India." />
+    content="India's top website development company. Expert in custom website design, responsive web development, e-commerce solutions, professional web applications and accounting softwares. Get a stunning, high-performance website that ranks on Google. Free consultation available." />
   <meta name="keywords"
-    content="web development, mobile app development, AI integration, digital strategy, Coimbatore, India, premium design, Apple-inspired" />
+    content="web development, mobile app development, AI integration, digital strategy, Coimbatore, India, premium design, Apple-inspired, website development company, website design company, web development services, custom website design, professional website development, responsive website design, e-commerce website development, website development agency, best website developers, website design and development, web application development, website maintenance services, SEO friendly website development, modern website design, website development cost, website development company in India, website design services, website development solutions, website redesign services, website development experts" />
   <meta name="author" content="Luno Tech" />
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Luno Tech - Think Different. Build Better." />
+  <meta property="og:title"
+    content="LunoTech - #1 Website Development & Design Company in India | Custom Web Solutions" />
   <meta property="og:description"
-    content="Premium digital solutions with Apple-inspired design. Where innovation meets craftsmanship." />
+    content="ransform your online presence with India's leading website development company. Expert in custom website design, responsive web development, and e-commerce solutions. Get a stunning, high-performance website that ranks on Google." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lunotech.in" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Luno Tech - Think Different. Build Better." />
-  <meta name="twitter:description" content="Premium digital solutions with Apple-inspired design." />
+  <meta name="twitter:title"
+    content="LunoTech - #1 Website Development & Design Company in India | Custom Web Solutions" />
+  <meta name="twitter:description"
+    content="ransform your online presence with India's leading website development company. Expert in custom website design, responsive web development, and e-commerce solutions. Get a stunning, high-performance website that ranks on Google." />
 
   <!-- Additional SEO -->
   <meta name="robots" content="index, follow" />
