--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title"
     content="LunoTech - #1 Website Development & Design Company in India | Custom Web Solutions" />
   <meta property="og:description"
-    content="ransform your online presence with India's leading website development company. Expert in custom website design, responsive web development, and e-commerce solutions. Get a stunning, high-performance website that ranks on Google." />
+    content="Transform your online presence with India's leading website development company. Expert in custom website design, responsive web development, and e-commerce solutions. Get a stunning, high-performance website that ranks on Google." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lunotech.in" />
 
@@ -24,7 +24,7 @@
   <meta name="twitter:title"
     content="LunoTech - #1 Website Development & Design Company in India | Custom Web Solutions" />
   <meta name="twitter:description"
-    content="ransform your online presence with India's leading website development company. Expert in custom website design, responsive web development, and e-commerce solutions. Get a stunning, high-performance website that ranks on Google." />
+    content="Transform your online presence with India's leading website development company. Expert in custom website design, responsive web development, and e-commerce solutions. Get a stunning, high-performance website that ranks on Google." />
 
   <!-- Additional SEO -->
   <meta name="robots" content="index, follow" />
@@ -39,6 +39,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+
+  <!-- Open Graph Image -->
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
 
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
