--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LunoTech - #1 Website Development & Design Company in India | Custom Web Solutions</title>
+  <title>LunoTech - #1 Website Development & Design Company in India with advanced SEO</title>
   <meta name="description"
     content="India's top website development company. Expert in custom website design, responsive web development, e-commerce solutions, professional web applications and accounting softwares. Get a stunning, high-performance website that ranks on Google. Free consultation available." />
   <meta name="keywords"
